@@ -6,3 +6,7 @@
 (function-call nil 
   (list-protocols ((id . "1234567892"))))
 
+;; Copying and distribution of this file, with or without modification,
+;; are permitted in any medium without royalty provided the copyright
+;; notice and this notice are preserved.  This file is offered as-is,
+;; without warranty of any kind.
