@@ -1,3 +1,8 @@
+;; Copying and distribution of this file, with or without modification,
+;; are permitted in any medium without royalty provided the copyright
+;; notice and this notice are preserved.  This file is offered as-is,
+;; without warranty of any kind.
+
 (setq eproc (elim-start))
 (setq uname (user-login-name))
 (elim-add-account eproc (concat uname "-elim@irc.freenode.net") "prpl-irc" nil)
