@@ -23,3 +23,8 @@ xmlnode * _h_elim_foo_bar ( const char *name ,
                             gpointer    data );
 
 #endif
+
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without warranty of any kind.
