@@ -12,3 +12,7 @@
 	* handlers: provide buddy-menu and buddy-menu-action handlers
 	* elisp   : implement (dynamic) extended buddy menu handling
 
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.  This file is offered as-is,
+without warranty of any kind.
